--- a/restaurants/templates/create.html
+++ b/restaurants/templates/create.html
@@ -5,6 +5,10 @@
         <title>Create</title>
     </head>
     <body>
-        
+    	<form method="POST">
+        {% csrf_token %}
+        {{form.as_p}}
+        <input type="submit" name="Create">
+        </form>
     </body>
 </html>
